# linuxtips-dundie-rewards-api

./: .dockerignore  .gitignore  Dockerfile.dev  README.md  docker-compose.yaml  pyproject.toml  test.sh
migrations/: env.py
migrations/versions/: 569749a64c19_initial.py  7ba234818bf3_change_password_field_name.py  883295019f6c_ensure_admin_user.py  a48d38805666_transaction.py  fd1419eac0ea_timezone.py
postgres/: Dockerfile
src/dundie_api/: auth.py  cli.py  config.py  db.py  default.toml  main.py  queue.py  security.py
src/dundie_api/models/: __init__.py  transaction.py  user.py
src/dundie_api/routers/: user.py
src/dundie_api/routes/: __init__.py  auth.py  transaction.py  user.py
src/dundie_api/serializers/: __init__.py  transaction.py  user.py
src/dundie_api/tasks/: transaction.py  user.py
tests/: conftest.py  test_api.py
ui/: index.html  users.html
