[project]
name = "dundie-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dundie_api"]

[dependency-groups]
dev = [
    "ipython>=9.3.0",
    "ruff>=0.12.1",
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
devserver = { cmd = "uv run fastapi dev src/dundie_api/main.py", help = "Run FastAPI Development Server" }