[project]
name = "dundie-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dynaconf>=3.2.11",
    "fastapi[standard]>=0.115.14",
    "sqlmodel>=0.0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dundie_api"]

[dependency-groups]
dev = [
    "ipython>=9.3.0",
    "ruff>=0.12.1",
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
devserver = { cmd = "uvicorn src.dundie_api.main:app --host 0.0.0.0 --port 8000 --reload", help = "Run FastAPI Development Server" }
rundocker = { cmd = "docker compose up --watch", help = "Run docker compose to initialize FastAPI and Postgres Containers."}
