[project]
name = "dundie-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.4",
    "dynaconf>=3.2.11",
    "fastapi[standard]>=0.115.14",
    "passlib[bcrypt]>=1.7.4",
    "psycopg[binary]>=3.2.9",
    "rich>=14.0.0",
    "sqlmodel>=0.0.24",
    "typer>=0.16.0",
]

[project.scripts]
dundie = "dundie_api.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dundie_api"]

[dependency-groups]
dev = [
    "ipython>=9.3.0",
    "ruff>=0.12.1",
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
devserver = { cmd = "uvicorn src.dundie_api.main:app --host 0.0.0.0 --port 8000 --reload", help = "Run FastAPI Development Server" }
rundocker = { cmd = "docker compose up -V --watch", help = "Run docker compose to initialize FastAPI and Postgres Containers."}
start_migrations = { cmd = "alembic init migrations", help = "Initialize Alembic Migrations"}
